package rpc;

option optimize_for = SPEED;

import      "message_common.proto";

//WorkGroups messages


//Get list of work groups for user's account
//  @filter allows to show deleted wgs
message WorkGroupsListRequest {
    optional string         session_id          = 1;
    optional Filter         filter              = 2;
}

message WorkGroupsListResponse {
    optional int32              error_code              = 1;
    repeated WorkGroupInfo      workgroup_info_list     = 2;
    optional int64              last_event_id           = 3;
}


